--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,9 +7,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.4",
+    "@reduxjs/toolkit": "^1.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.1",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.3"
   },
   "scripts": {
